# qdgc

./: .gitignore  CLAUDE.md  README.md  history.md  learning.md  lonlat2qdgc_cmd.py  lonlat2qdgc_daemon.py  qdgc_generator.fmw  readme.txt
.github/workflows/: qdgc_pg-ci.yml  qdgc_pg-release.yml  qdgc_py-ci.yml  (+1 more)
qdgc_delivery/: README.md  geopackage_readme.txt
qdgc_pg/: CHANGELOG.md  META.json  Makefile  README.md  qdgc--0.1.0.sql  qdgc.control  qdgc_postgis--0.1.0.sql  qdgc_postgis.control
qdgc_py/: .gitignore  README.md  pyproject.toml
qdgc_py_legacy/: README.md
qdgc_python/: README.md
qdgc_python/qdgc_py/: pyproject.toml
qdgc_python/qdgc_py/src/qdgc_py/: __init__.py
qdgc_python/qdgc_py/tests/: test_qdgc_py.py
quarter_degree_grid_cells/: afg.7z  ago.7z  alb.7z  are.7z  arg.7z  arm.7z  atf.7z  aus.7z  aut.7z  aze.7z  bdi.7z  bel.7z  ben.7z  bfa.7z  bgd.7z  bgr.7z  bhs.7z  bih.7z  blr.7z  blz.7z  bol.7z  bra.7z  brn.7z  btn.7z  bwa.7z  caf.7z  che.7z  chl.7z  chn.7z  civ.7z  cmr.7z  cod.7z  cog.7z  col.7z  cri.7z  cub.7z  cyp.7z  cze.7z  deu.7z  dji.7z  (+130 more)
scripts/: create_function_qdgc_fillqdgc.sql  create_function_qdgc_get_lonlat  create_function_qdgc_get_recursivestring  create_function_qdgc_getqdgc.sql  create_function_qdgc_getrecursive_string  create_function_qdgc_getrecursivestring  create_function_qdgc_getrecursivestring.sql  qdgc_generate_readme.py  qdgc_getqdgc.sql  qdgc_getqdgcfromlatlondepth  qdgc_postgis.sql  qdgc_recursive.py  run_qdgc_africa.sql
secrets/: README.md
templates/: readme.tpl
tools/: create_country_qdgc.py  qdgc_lib.py
(+35 files in other folders)
